--- a/app/views/intervals/today.html.erb
+++ b/app/views/intervals/today.html.erb
@@ -1,12 +1,12 @@
 <%- model_class = Interval.new.class -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+  <h1>todays intervals</h1>
 </div>
 
 <%= render :partial => 'list' %>
 
 <% if @is_working %>
-	<%= link_to 'stop working', intervals_stop_path, :class => 'btn btn-primary' %>
+	<%= link_to 'stop working', intervals_stop_path, :method => :put, :class => 'btn btn-primary' %>
 <% else %>
-	<%= link_to 'start working', intervals_start_path, :class => 'btn btn-primary' %>
+	<%= link_to 'start working', intervals_start_path, :method => :post, :class => 'btn btn-primary' %>
 <% end %>
