--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
     			    <li><%= link_to "Sign up", signup_path %></li>
     			    <li><%= link_to "log in", login_path %></li>
   			    <% end %>
+            <li><%= link_to "today", intervals_today_path %></li>
           </ul>
         </div>
       </div>
