--- a/app/views/intervals/_list.html.erb
+++ b/app/views/intervals/_list.html.erb
@@ -1,30 +1,34 @@
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>id%></th>
-      <th>start%></th>
-      <th>stop%></th>
-      <th>difference</th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @intervals.each do |interval| %>
+<% if not @intervals.empty? %>
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= link_to interval.id, interval_path(interval) %></td>
-        <td><%= interval.start %></td>
-        <td><%= interval.stop %></td>
-        <td><%= interval.diff %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_interval_path(interval), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      interval_path(interval),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
+        <th>id</th>
+        <th>start</th>
+        <th>stop</th>
+        <th>difference</th>
+        <th><%=t '.actions', :default => t("helpers.actions") %></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @intervals.each do |interval| %>
+        <tr>
+          <td><%= link_to interval.id, interval_path(interval) %></td>
+          <td><%= interval.start %></td>
+          <td><%= interval.stop %></td>
+          <td><%= interval.diff %></td>
+          <td>
+            <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                        edit_interval_path(interval), :class => 'btn btn-mini' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                        interval_path(interval),
+                        :method => :delete,
+                        :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                        :class => 'btn btn-mini btn-danger' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  no intervals available.</br></br>
+<% end %>
