--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,12 @@
             <% if current_user %>
               <li>Logged in as <%= current_user.name %>.</li>
   			      <li><%= link_to "Log out", logout_path %></li>
+              <li><%= link_to "today", intervals_today_path %></li>
+              <li><%= link_to "preferences", edit_user_path(current_user) %></li>
   			    <% else %>
     			    <li><%= link_to "Sign up", signup_path %></li>
     			    <li><%= link_to "log in", login_path %></li>
   			    <% end %>
-            <li><%= link_to "today", intervals_today_path %></li>
           </ul>
         </div>
       </div>
