authorization added; authentication changed to applicationcontroller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
         <div class="nav-collapse">
           <ul class="nav">
             <% if current_user %>
-              <li>Logged in as <%= current_user.name %>.</li>
-  			      <li><%= link_to "Log out", logout_path %></li>
-              <li><%= link_to "today", intervals_today_path %></li>
+              <li><%= link_to "today", today_intervals_path %></li>
               <li><%= link_to "preferences", edit_user_path(current_user) %></li>
+              <li><a>Logged in as <%= current_user.name %>.</a></li>
+              <li><%= link_to "Log out", logout_path %></li>
   			    <% else %>
     			    <li><%= link_to "Sign up", signup_path %></li>
     			    <li><%= link_to "log in", login_path %></li>
