stats on todays overview page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,9 @@
         <%= render 'layouts/messages' %>
         <%= yield %>
       </div>
+      <div class="span3">
+        <%= yield :sidebar %>
+      </div>
     </div>
   </div>
 </body>
