--- a/app/views/intervals/_form.html.erb
+++ b/app/views/intervals/_form.html.erb
@@ -15,6 +15,6 @@
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                intervals_path, :class => 'btn' %>
+                today_intervals_path, :class => 'btn' %>
   </div>
 <% end %>
