--- a/app/views/intervals/today.html.erb
+++ b/app/views/intervals/today.html.erb
@@ -10,3 +10,48 @@
 <% else %>
 	<%= link_to 'start working', start_interval_path, :method => :post, :class => 'btn btn-primary' %>
 <% end %>
+
+<% content_for :sidebar do %>
+  <div class="control-group">
+    worktime:
+    <div class="controls">
+      <%= @worktime %>
+    </div>
+  </div>
+  <div class="control-group">
+    overtime:
+    <div class="controls">
+      <%= @overtime %>
+    </div>
+  </div>
+  <div class="control-group">
+    worked time:
+    <div class="controls">
+      <%= @worked_time %>
+    </div>
+  </div>
+  <div class="control-group">
+    time to work:
+    <div class="controls">
+      <%= @time_to_work %>
+    </div>
+  </div>
+  <div class="control-group">
+    time to work without overtime:
+    <div class="controls">
+      <%= @time_to_work_without_overtime %>
+    </div>
+  </div>
+  <div class="control-group">
+    finishing time:
+    <div class="controls">
+      <%= @finishing_time %>
+    </div>
+  </div>
+  <div class="control-group">
+    finishing time without overtime:
+    <div class="controls">
+      <%= @finishing_time_without_overtime %>
+    </div>
+  </div>
+<% end %>
