--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,6 +32,6 @@
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                users_path, :class => 'btn' %>
+                today_intervals_path, :class => 'btn' %>
   </div>
 <% end %>
