authorization error invalidates the session and returns to login directly;

--- a/app/views/intervals/today.html.erb
+++ b/app/views/intervals/today.html.erb
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div class="control-group">
-    time to work:
+    time to work with overtime:
     <div class="controls">
       <%= @time_to_work %>
     </div>
