--- a/app/views/intervals/show.html.erb
+++ b/app/views/intervals/show.html.erb
@@ -5,11 +5,11 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:start) %>:</strong></dt>
-  <dd><%= @interval.start %></dd>
+  <dd><%= format_datetime_depending_on_date @interval.start %></dd>
   <dt><strong><%= model_class.human_attribute_name(:stop) %>:</strong></dt>
-  <dd><%= @interval.stop %></dd>
+  <dd><%= format_datetime_depending_on_date @interval.stop %></dd>
   <dt><strong>difference:</strong></dt>
-  <dd><%= @interval.diff %></dd>
+  <dd><%= format_safe_duration @interval.diff %></dd>
 </dl>
 
 <div class="form-actions">
