--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <ul class="nav">
             <% if current_user %>
               <li><%= link_to "today", today_intervals_path %></li>
-              <li><%= link_to "preferences", edit_user_path(current_user) %></li>
+              <li><%= link_to "preferences", user_path(current_user) %></li>
               <li><a>Logged in as <%= current_user.name %>.</a></li>
               <li><%= link_to "Log out", logout_path %></li>
   			    <% else %>
