--- a/app/views/intervals/_form.html.erb
+++ b/app/views/intervals/_form.html.erb
@@ -2,13 +2,13 @@
   <div class="control-group">
     <%= f.label :start, :class => 'control-label' %>
     <div class="controls">
-      <%= f.datetime_select :start, :class => 'datetime_select' %>
+      <%= f.text_field :start, :class => 'datetimepicker' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :stop, :class => 'control-label' %>
     <div class="controls">
-      <%= f.datetime_select :stop, :class => 'datetime_select' %>
+      <%= f.text_field :stop, :class => 'datetimepicker' %>
     </div>
   </div>
 
