--- a/app/views/intervals/_form.html.erb
+++ b/app/views/intervals/_form.html.erb
@@ -2,13 +2,15 @@
   <div class="control-group">
     <%= f.label :start, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :start, :class => 'datetimepicker' %>
+      <%= f.text_field :start, :value => format_datetime_secure(@interval.start),
+        :class => 'datetimepicker' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :stop, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :stop, :class => 'datetimepicker' %>
+      <%= f.text_field :stop, :value => format_datetime_secure(@interval.stop), 
+        :class => 'datetimepicker' %>
     </div>
   </div>
 
