negative overtime is visible

--- a/app/views/intervals/today.html.erb
+++ b/app/views/intervals/today.html.erb
@@ -21,7 +21,7 @@
   <div class="control-group">
     overtime:
     <div class="controls">
-      <%= format_safe_duration nil,@overtime %>
+      <%= format_duration calcuate_hours_mins_secs @overtime %>
     </div>
   </div>
   <div class="control-group">
