overtime calculation switch to calculation for last day

--- a/app/views/intervals/today.html.erb
+++ b/app/views/intervals/today.html.erb
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="control-group">
-    overtime:
+    overtime from last day:
     <div class="controls">
       <%= format_duration calcuate_hours_mins_secs @overtime %>
     </div>
