--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,10 +13,9 @@
 </dl>
 
 <div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              today_intervals_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_user_path(@user), :class => 'btn' %>
+  <%= link_to 'recalculate overtime', recalculate_overtime_path, :method => :post, :class => 'btn' %>
+  <%= link_to t('.back', :default => t("helpers.links.back")),today_intervals_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),edit_user_path(@user), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               user_path(@user),
               :method => 'delete',
